--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,23 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
-	"extends": ["plugin:react/recommended", "airbnb"],
-	"parserOptions": {
-		"ecmaFeatures": {
-			"jsx": true
-		},
-		"ecmaVersion": 12,
-		"sourceType": "module"
-	},
-	"plugins": ["react"],
-	"rules": {
-		"react/no-array-index-key": "off",
-		"react-hooks/exhaustive-deps": "off",
-		"react/jsx-filename-extension": "off",
-		"indent": [2, "tab"]
-	}
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["plugin:react/recommended", "airbnb"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "react/no-array-index-key": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react/jsx-filename-extension": "off",
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "import/no-cycle": "off",
+    "comma-dangle": ["error", "never"]
+  }
 }
