--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,4 @@
 {
-	"useTabs": true,
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"bracketSpacing": true,
-	"jsxBracketSameLine": false
+  "singleQuote": true,
+  "trailingComma": "none"
 }
