un-ignoring commas

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
     "react-hooks/exhaustive-deps": "off",
     "react/jsx-filename-extension": "off",
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-    "import/no-cycle": "off",
-    "comma-dangle": ["error", "never"]
+    "import/no-cycle": "off"
   }
 }
